# SeetaFace6Open

./: .gitignore  README.md  Tutorial.md  build_sdk.bat  build_sdk.sh  make.bat  make_sdk.bat
FaceAntiSpoofingX6/: CMakeLists.txt
FaceAntiSpoofingX6/craft/: build.win.vc14.x64.cmd
FaceBoxes/FaceDetector/: CMakeLists.txt
FaceBoxes/craft/: build.linux.x64.sh
FaceTracker6/: CMakeLists.txt
FaceTracker6/craft/: build.win.vc14.x64.cmd  build.win.vc14.x64.debug.cmd  build.win.vc14.x86.cmd  build.win.vc14.x86.debug.cmd
Landmarker/craft/: build.linux.x64.sh
OpenRoleZoo/craft/: build.linux.x64.sh  build.win.vc14.x64.cmd  build.win.vc14.x64.debug.cmd  build.win.vc14.x86.cmd  build.win.vc14.x86.debug.cmd
PoseEstimator6/: CMakeLists.txt
QualityAssessor3/: CMakeLists.txt
QualityAssessor3/QualityAssessor/: CMakeLists.txt
QualityAssessor3/craft/: build.win.vc14.x86.cmd  build.win.vc14.x86.debug.cmd
SeetaAgePredictor/craft/: build.linux.x64.sh
SeetaAuthorize/: CMakeLists.txt
SeetaAuthorize/craft/: build.linux.x64.sh  build.win.vc14.x64.cmd  build.win.vc14.x64.debug.cmd  build.win.vc14.x86.cmd  build.win.vc14.x86.debug.cmd
SeetaGenderPredictor/craft/: build.linux.x64.sh
SeetaMaskDetector/craft/: build.linux.x64.sh  build.win.vc14.x64.debug.cmd
TenniS/: CMakeLists.txt
TenniS/craft/: build.linux.arm.sh  build.linux.x64.sh  build.linux.x64_gpu.sh  build.win.vc14.x64.cmd  build.win.vc14.x64.debug.cmd  build.win.vc14.x64_gpu.cmd  build.win.vc14.x86.cmd  (+2 more)
docs/: 质量评估器.md
example/opencv/: CMakeLists.txt  FaceEngine2.cpp  FaceEngine2.h  main.cpp
(+29 files in other folders)
